refactor: убрать лишнее из index.js и вынести массив в отдельный файл

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Mesto | Yandex | Practicum</title>
   <link rel="shortcut icon" href="./images/svg/favicon.svg" type="image/x-icon">
   <link rel="stylesheet" href="./pages/index.css">
+  <script defer src='./js/cards.js'></script>
   <script defer src="./js/index.js"></script>
 </head>
 
