feat: добавить disable для кнопки submit

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
         <form class='popup__form' name='popup-user' novalidate>
           <input id='input-name' class='popup__input popup__input_type_name' type='text' name='name'
             placeholder='Введите имя' minlength='2' maxlength='40' required>
-          <span class="input-name-error popup__input-error">Сообщение об ошибке</span>
+          <span class="input-name-error popup__error">Сообщение об ошибке</span>
 
           <input id='input-job' class='popup__input popup__input_type_job' type='text' name='job'
             placeholder='Введите профессию' minlength='2' maxlength='40' required>
-          <span class="input-job-error popup__input-error">Сообщение об ошибке</span>
+          <span class="input-job-error popup__error">Сообщение об ошибке</span>
 
           <button class='popup__submit hover' type='submit'>Сохранить</button>
         </form>
@@ -72,11 +72,11 @@
         <form class='popup__form' name='popup-gallery' novalidate>
           <input id='input-place' class='popup__input popup__input_type_place' type='text' name='place'
             placeholder='Название' minlength='2' maxlength='40' required>
-          <span class="input-place-error popup__input-error">Сообщение об ошибке</span>
+          <span class="input-place-error popup__error">Сообщение об ошибке</span>
 
           <input id='input-link' class='popup__input popup__input_type_link' type='url' name='link'
             placeholder='Ссылка на картинку' required>
-          <span class="input-link-error popup__input-error">Сообщение об ошибке</span>
+          <span class="input-link-error popup__error">Сообщение об ошибке</span>
 
           <button class='popup__submit hover' type='submit'>Создать</button>
         </form>
