feat: class Card

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <link rel="shortcut icon" href="./images/svg/favicon.svg" type="image/x-icon">
   <link rel="stylesheet" href="./pages/index.css">
   <script defer src='./js/cards.js'></script>
-  <script defer src="./js/index.js"></script>
+  <!--   <script defer src="./js/index.js"></script> -->
   <script defer src="./js/validate.js"></script>
+  <script defer src="./js/Card.js"></script>
 </head>
 
 <body class="page">
