--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
   <title>Mesto | Yandex | Practicum</title>
   <link rel="shortcut icon" href="./images/svg/favicon.svg" type="image/x-icon">
   <link rel="stylesheet" href="./pages/index.css">
-  <script defer src='./js/cards.js'></script>
-  <!--   <script defer src="./js/index.js"></script> -->
-  <script defer src="./js/validate.js"></script>
-  <script defer src="./js/Card.js"></script>
+
+  <script type='module' defer src="./js/index.js"></script>
 </head>
 
 <body class="page">
