refactor: add PopupWithForm and PopupWithImage

--- a/src/index.html
+++ b/src/index.html
@@ -82,8 +82,8 @@
     <section class='popup popup_picture'>
       <figure class="popup__figure">
         <button class='popup__close hover' type='button' aria-label='Кнопка закрыть.'></button>
-        <img class="popup__img" src="./images/jpeg/gallery-01.jpg" alt="">
-        <figcaption class="popup__caption">Водопад</figcaption>
+        <img class="popup__img" src="" alt="">
+        <figcaption class="popup__caption"></figcaption>
       </figure>
     </section>
 
@@ -91,10 +91,10 @@
       <li class="gallery__item">
         <div class='gallery__content'>
           <button class='gallery__trash hover' type='button' aria-label='Кнопка корзины.'></button>
-          <img class="gallery__image" src="./images/jpeg/gallery-01.jpg" alt="Водопад в джунглях.">
+          <img class="gallery__image" src="" alt="">
         </div>
         <div class="gallery__info">
-          <h2 class="gallery__name">Водопад</h2>
+          <h2 class="gallery__name"></h2>
           <button class="gallery__like hover" type='button' aria-label="Кнопка лайк."></button>
         </div>
       </li>
