--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
         <button class='popup__close hover' type='button' aria-label='Кнопка закрыть.'></button>
         <h2 class='popup__title'>Новое место</h2>
         <form class='popup__form' name='popup-gallery' novalidate>
-          <input id='input-place' class='popup__input popup__input_type_place' type='text' name='place'
+          <input id='input-place' class='popup__input popup__input_type_place' type='text' name='name'
             placeholder='Название' minlength='2' maxlength='30' required>
           <span class="input-place-error popup__error">Сообщение об ошибке</span>
 
