bugfix: resolve autotest

--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
     <section class='popup popup_picture'>
       <figure class="popup__figure">
         <button class='popup__close hover' type='button' aria-label='Кнопка закрыть.'></button>
-        <img class="popup__img" src="" alt="">
+        <img class="popup__img" src="<%=require('./images/jpeg/gallery-03.jpg')%>" alt="Пирамиды">
         <figcaption class="popup__caption"></figcaption>
       </figure>
     </section>
@@ -91,7 +91,7 @@
       <li class="gallery__item">
         <div class='gallery__content'>
           <button class='gallery__trash hover' type='button' aria-label='Кнопка корзины.'></button>
-          <img class="gallery__image" src="" alt="">
+          <img class="gallery__image" src="<%=require('./images/jpeg/gallery-03.jpg')%>" alt="Пирамиды">
         </div>
         <div class="gallery__info">
           <h2 class="gallery__name"></h2>
