--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,9 @@
     <main class="main">
       <section class='profile' aria-label="Информация о пользователе.">
         <div class='profile__info'>
-          <img class="profile__img" src="<%=require('./images/jpeg/avatar.jpg')%>" alt="Аватар пользователя.">
-
+          <div class='profile__avatar'>
+            <img class="profile__img hover" src="<%=require('./images/jpeg/avatar.jpg')%>" alt="Аватар пользователя.">
+          </div>
           <div class='profile__person'>
             <h1 class="profile__name">Жак-Ив Кусто</h1>
             <p class="profile__job">Исследователь океана</p>
@@ -92,6 +93,19 @@
         <button class='popup__close hover' type='button' aria-label='Кнопка закрыть.'></button>
         <h2 class='popup__title'>Вы уверены?</h2>
         <button class='popup__submit hover' type='button'>Да</button>
+      </div>
+    </section>
+
+    <section class='popup popup_avatar'>
+      <div class='popup__container'>
+        <button class='popup__close hover' type='button' aria-label='Кнопка закрыть.'></button>
+        <h2 class='popup__title'>Обновить аватар</h2>
+        <form class='popup__form' name='popup-avatar' novalidate>
+          <input id='input-avatar' class='popup__input popup__input_type_avatar' type='url' name='avatar'
+            placeholder='Ссылка на картинку' required>
+          <span class="input-avatar-error popup__error">Сообщение об ошибке</span>
+          <button class='popup__submit hover' type='submit'>Сохранить</button>
+        </form>
       </div>
     </section>
 
