feat: pr9 first review

--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
             placeholder='Ссылка на картинку' required>
           <span class="input-link-error popup__error">Сообщение об ошибке</span>
 
-          <button class='popup__submit hover' type='submit'>Сохранить</button>
+          <button class='popup__submit hover' type='submit'>Создать</button>
         </form>
       </div>
     </section>
